<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise_Day3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contact_hint">Enter Contact</string>
    <string name="message_hint">Enter Message</string>
    <string name="send_button">Send</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_sent">Message Sent</string>
    <string name="toast_cancelled">Operation cancelled by user.</string>
    <string name="dialog_message">Send Message to: \n\t%1$s</string>
    <string name="send_warning">No Contact Info Entered.</string>
    <string name="messaging_button">Messaging</string>
    <string name="image_button">Show Image</string>
    <string name="contacts_button">Contacts</string>
    <string name="contact">Contact</string>
    <string name="number_hint">Enter Number</string>
    <string name="number_text">Number</string>

</resources>