<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/homeMessaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messaging_button" />

    <Button
        android:id="@+id/homeShowImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_button" />

</LinearLayout>