<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >

    <EditText
        android:id="@+id/contactInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/message_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="256" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="256dp"
        android:text="@string/send_button" />

</LinearLayout>