<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/item_padding" >

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/contactImage"
            android:layout_width="@dimen/item_image_width_height"
            android:layout_height="@dimen/item_image_width_height"
            android:layout_marginLeft="@dimen/item_text_margin_left" />

        <EditText
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_text_margin_left"
            android:hint="@string/contact_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_text"
            android:textSize="@dimen/item_text_size" />

        <EditText
            android:id="@+id/contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_text_margin_left"
            android:hint="@string/number_hint" />
    </LinearLayout>

</LinearLayout>